--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/HiddenTitleTheme">
+        android:theme="@style/Theme.NGS_Test_Login.">
         <activity
-            android:name=".MainActivity.MainActivity"
+            android:name=".MainActivity.Presentation.MainActivity"
             android:exported="true">
             <intent-filter>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
@@ -22,10 +24,7 @@
             android:name=".LoginActivity.Presentation.LoginActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
 
