--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NGS_Test_Login.">
+        android:theme="@style/Theme.NGS_Test_Login.Login">
         <activity
+            android:theme="@style/Theme.NGS_Test_Login.Main"
             android:name=".MainActivity.Presentation.MainActivity"
             android:exported="true">
             <intent-filter>
