--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     //Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
+    def coroutines_version = "1.6.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    def retrofit_version = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
 
     //activity and fragments
     def activity_version = "1.4.0"
@@ -61,6 +63,11 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
     //Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+    def navigation_version = "2.4.2"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
+
+    //Gson
+    def gson_version = "2.9.0"
+    implementation "com.google.code.gson:gson:$gson_version"
 }
