--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,8 @@ dependencies {
     //Gson
     def gson_version = "2.9.0"
     implementation "com.google.code.gson:gson:$gson_version"
+
+    //Socket
+    def socket_version = "2.0.1"
+    implementation "io.socket:socket.io-client:$socket_version"
 }
